--- a/src/NuGet.Core/NuGet.CommandLine.XPlat/Strings.resx
+++ b/src/NuGet.Core/NuGet.CommandLine.XPlat/Strings.resx
@@ -576,4 +576,7 @@ For more information, visit https://docs.nuget.org/docs/reference/command-line-r
   <data name="ListPkg_InvalidOptionsOutdatedAndDeprecated" xml:space="preserve">
     <value>Invalid command. Combining the '--outdated' and '--deprecated' options is not supported.</value>
   </data>
+  <data name="PushCommandSkipDuplicateDescription" xml:space="preserve">
+    <value>If a package and version already exists, skip it and continue with the next package in the push, if any.</value>
+  </data>
 </root>
