Add support for DependencyVersion to NuGet.exe cli UpdateCommand
-Add new helper to handle the DependencyVersion, to avoid to duplicate code between the Install and Update command.
-Add the related unit tests to ensure the default behavior still work and the new features work as expect

--- a/src/NuGet.Clients/NuGet.CommandLine/NuGetCommand.resx
+++ b/src/NuGet.Clients/NuGet.CommandLine/NuGetCommand.resx
@@ -5526,4 +5526,7 @@ nuget-trusted-signers Remove -Name TrustedRepo</value>
   <data name="TrustedSignersCommandServiceIndexDescription" xml:space="preserve">
     <value>Service index for a repository to be trusted.</value>
   </data>
+  <data name="UpdateCommandDependencyVersion" xml:space="preserve">
+    <value>Overrides the default dependency resolution behavior.</value>
+  </data>
 </root>
